# presidio

./: .gitignore  CLAUDE.md  README.md  Taskfile.yaml  generate_fake_data.py  main.py  pyproject.toml
docs/: analyzer.md  data-generation.md  evaluation.md
resources/: __init__.py  benchmark_analyzer.py  evaluate_dataset.py  evaluate_prompt.py  generate_dataset.py  generate_fake_data.py
resources/config/: analyzer-config.yaml  analyzer_config.json  generate-dataset-config.yaml  nlp-config.yaml  recognizers-config.yaml  sample_config.json
resources/data/: benchmark_prompts.yaml  fake_data_test_size_200_en_US.json
resources/scripts/: __init__.py  analyzer.py  evaluation.py  models.py  utils.py
